meta3/y.output
Terminals which are not used

   RESERVED


Grammar

    0 $accept: start $end

    1 start: start functionDefinition
    2      | start functionDeclaration
    3      | start declaration
    4      | functionDefinition
    5      | functionDeclaration
    6      | declaration

    7 functionDefinition: typeSpecifier functionDeclarator LBRACE new_eleven new_four RBRACE

    8 new_eleven: new_eleven declaration
    9           | /* empty */

   10 functionDeclaration: typeSpecifier functionDeclarator SEMI

   11 functionDeclarator: new_six ID LPAR new_ten RPAR

   12 new_ten: parameterList
   13        | /* empty */

   14 parameterList: parameterDeclaration new_nine

   15 new_nine: new_nine COMMA parameterDeclaration
   16         | /* empty */

   17 parameterDeclaration: typeSpecifier new_six ID

   18 declaration: typeSpecifier declarator new_eight SEMI

   19 new_eight: new_eight COMMA declarator
   20          | /* empty */

   21 typeSpecifier: INT
   22              | CHAR

   23 declarator: new_six ID new_seven

   24 new_six: new_six AST
   25        | /* empty */

   26 new_seven: LSQ expression RSQ
   27          | /* empty */

   28 statement: SEMI
   29          | expression SEMI
   30          | LBRACE new_four RBRACE
   31          | IF LPAR expression RPAR statement ELSE statement
   32          | IF LPAR expression RPAR statement
   33          | WHILE LPAR expression RPAR statement
   34          | RETURN expression SEMI

   35 new_four: new_four statement
   36         | /* empty */

   37 expression: expression ASSIGN expression
   38           | expression OR expression
   39           | expression AND expression
   40           | expression GE expression
   41           | expression LE expression
   42           | expression GT expression
   43           | expression LT expression
   44           | expression NE expression
   45           | expression EQ expression
   46           | expression MOD expression
   47           | expression DIV expression
   48           | expression AST expression
   49           | expression MINUS expression
   50           | expression PLUS expression
   51           | NOT expression
   52           | MINUS expression
   53           | PLUS expression
   54           | AST expression
   55           | AMP expression
   56           | expression LSQ expression RSQ
   57           | ID LPAR new_one RPAR
   58           | ATOI LPAR expression RPAR
   59           | PRINTF LPAR expression RPAR
   60           | ITOA LPAR expression COMMA expression RPAR
   61           | LPAR expression RPAR
   62           | STRLIT
   63           | CHRLIT
   64           | INTLIT
   65           | ID

   66 new_one: expression new_two
   67        | /* empty */

   68 new_two: new_two COMMA expression
   69        | /* empty */


Terminals, with rules where they appear

$end (0) 0
error (256)
RESERVED (258)
IF (259) 31 32
ELSE (260) 31
WHILE (261) 33
ATOI (262) 58
ITOA (263) 60
CHAR (264) 22
PRINTF (265) 59
RETURN (266) 34
EQ (267) 45
ASSIGN (268) 37
GE (269) 40
GT (270) 42
LE (271) 41
LT (272) 43
NE (273) 44
AMP (274) 55
AND (275) 39
AST (276) 24 48 54
DIV (277) 47
COMMA (278) 15 19 60 68
SEMI (279) 10 18 28 29 34
LBRACE (280) 7 30
RBRACE (281) 7 30
LSQ (282) 26 56
RSQ (283) 26 56
LPAR (284) 11 31 32 33 57 58 59 60 61
RPAR (285) 11 31 32 33 57 58 59 60 61
MINUS (286) 49 52
PLUS (287) 50 53
MOD (288) 46
NOT (289) 51
OR (290) 38
INT (291) 21
UMINUS (292)
UPLUS (293)
INTLIT (294) 64
CHRLIT (295) 63
STRLIT (296) 62
ID (297) 11 17 23 57 65


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
start (44)
    on left: 1 2 3 4 5 6, on right: 0 1 2 3
functionDefinition (45)
    on left: 7, on right: 1 4
new_eleven (46)
    on left: 8 9, on right: 7 8
functionDeclaration (47)
    on left: 10, on right: 2 5
functionDeclarator (48)
    on left: 11, on right: 7 10
new_ten (49)
    on left: 12 13, on right: 11
parameterList (50)
    on left: 14, on right: 12
new_nine (51)
    on left: 15 16, on right: 14 15
parameterDeclaration (52)
    on left: 17, on right: 14 15
declaration (53)
    on left: 18, on right: 3 6 8
new_eight (54)
    on left: 19 20, on right: 18 19
typeSpecifier (55)
    on left: 21 22, on right: 7 10 17 18
declarator (56)
    on left: 23, on right: 18 19
new_six (57)
    on left: 24 25, on right: 11 17 23 24
new_seven (58)
    on left: 26 27, on right: 23
statement (59)
    on left: 28 29 30 31 32 33 34, on right: 31 32 33 35
new_four (60)
    on left: 35 36, on right: 7 30 35
expression (61)
    on left: 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54
    55 56 57 58 59 60 61 62 63 64 65, on right: 26 29 31 32 33 34 37
    38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 58 59
    60 61 66 68
new_one (62)
    on left: 66 67, on right: 57
new_two (63)
    on left: 68 69, on right: 66 68


state 0

    0 $accept: . start $end
    1 start: . start functionDefinition
    2      | . start functionDeclaration
    3      | . start declaration
    4      | . functionDefinition
    5      | . functionDeclaration
    6      | . declaration
    7 functionDefinition: . typeSpecifier functionDeclarator LBRACE new_eleven new_four RBRACE
   10 functionDeclaration: . typeSpecifier functionDeclarator SEMI
   18 declaration: . typeSpecifier declarator new_eight SEMI
   21 typeSpecifier: . INT
   22              | . CHAR

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2

    start                go to state 3
    functionDefinition   go to state 4
    functionDeclaration  go to state 5
    declaration          go to state 6
    typeSpecifier        go to state 7


state 1

   22 typeSpecifier: CHAR .

    $default  reduce using rule 22 (typeSpecifier)


state 2

   21 typeSpecifier: INT .

    $default  reduce using rule 21 (typeSpecifier)


state 3

    0 $accept: start . $end
    1 start: start . functionDefinition
    2      | start . functionDeclaration
    3      | start . declaration
    7 functionDefinition: . typeSpecifier functionDeclarator LBRACE new_eleven new_four RBRACE
   10 functionDeclaration: . typeSpecifier functionDeclarator SEMI
   18 declaration: . typeSpecifier declarator new_eight SEMI
   21 typeSpecifier: . INT
   22              | . CHAR

    $end  shift, and go to state 8
    CHAR  shift, and go to state 1
    INT   shift, and go to state 2

    functionDefinition   go to state 9
    functionDeclaration  go to state 10
    declaration          go to state 11
    typeSpecifier        go to state 7


state 4

    4 start: functionDefinition .

    $default  reduce using rule 4 (start)


state 5

    5 start: functionDeclaration .

    $default  reduce using rule 5 (start)


state 6

    6 start: declaration .

    $default  reduce using rule 6 (start)


state 7

    7 functionDefinition: typeSpecifier . functionDeclarator LBRACE new_eleven new_four RBRACE
   10 functionDeclaration: typeSpecifier . functionDeclarator SEMI
   11 functionDeclarator: . new_six ID LPAR new_ten RPAR
   18 declaration: typeSpecifier . declarator new_eight SEMI
   23 declarator: . new_six ID new_seven
   24 new_six: . new_six AST
   25        | .

    $default  reduce using rule 25 (new_six)

    functionDeclarator  go to state 12
    declarator          go to state 13
    new_six             go to state 14


state 8

    0 $accept: start $end .

    $default  accept


state 9

    1 start: start functionDefinition .

    $default  reduce using rule 1 (start)


state 10

    2 start: start functionDeclaration .

    $default  reduce using rule 2 (start)


state 11

    3 start: start declaration .

    $default  reduce using rule 3 (start)


state 12

    7 functionDefinition: typeSpecifier functionDeclarator . LBRACE new_eleven new_four RBRACE
   10 functionDeclaration: typeSpecifier functionDeclarator . SEMI

    SEMI    shift, and go to state 15
    LBRACE  shift, and go to state 16


state 13

   18 declaration: typeSpecifier declarator . new_eight SEMI
   19 new_eight: . new_eight COMMA declarator
   20          | .

    $default  reduce using rule 20 (new_eight)

    new_eight  go to state 17


state 14

   11 functionDeclarator: new_six . ID LPAR new_ten RPAR
   23 declarator: new_six . ID new_seven
   24 new_six: new_six . AST

    AST  shift, and go to state 18
    ID   shift, and go to state 19


state 15

   10 functionDeclaration: typeSpecifier functionDeclarator SEMI .

    $default  reduce using rule 10 (functionDeclaration)


state 16

    7 functionDefinition: typeSpecifier functionDeclarator LBRACE . new_eleven new_four RBRACE
    8 new_eleven: . new_eleven declaration
    9           | .

    $default  reduce using rule 9 (new_eleven)

    new_eleven  go to state 20


state 17

   18 declaration: typeSpecifier declarator new_eight . SEMI
   19 new_eight: new_eight . COMMA declarator

    COMMA  shift, and go to state 21
    SEMI   shift, and go to state 22


state 18

   24 new_six: new_six AST .

    $default  reduce using rule 24 (new_six)


state 19

   11 functionDeclarator: new_six ID . LPAR new_ten RPAR
   23 declarator: new_six ID . new_seven
   26 new_seven: . LSQ expression RSQ
   27          | .  [COMMA, SEMI]

    LSQ   shift, and go to state 23
    LPAR  shift, and go to state 24

    $default  reduce using rule 27 (new_seven)

    new_seven  go to state 25


state 20

    7 functionDefinition: typeSpecifier functionDeclarator LBRACE new_eleven . new_four RBRACE
    8 new_eleven: new_eleven . declaration
   18 declaration: . typeSpecifier declarator new_eight SEMI
   21 typeSpecifier: . INT
   22              | . CHAR
   35 new_four: . new_four statement
   36         | .  [IF, WHILE, ATOI, ITOA, PRINTF, RETURN, AMP, AST, SEMI, LBRACE, RBRACE, LPAR, MINUS, PLUS, NOT, INTLIT, CHRLIT, STRLIT, ID]

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2

    $default  reduce using rule 36 (new_four)

    declaration    go to state 26
    typeSpecifier  go to state 27
    new_four       go to state 28


state 21

   19 new_eight: new_eight COMMA . declarator
   23 declarator: . new_six ID new_seven
   24 new_six: . new_six AST
   25        | .

    $default  reduce using rule 25 (new_six)

    declarator  go to state 29
    new_six     go to state 30


state 22

   18 declaration: typeSpecifier declarator new_eight SEMI .

    $default  reduce using rule 18 (declaration)


state 23

   26 new_seven: LSQ . expression RSQ
   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   53           | . PLUS expression
   54           | . AST expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 44


state 24

   11 functionDeclarator: new_six ID LPAR . new_ten RPAR
   12 new_ten: . parameterList
   13        | .  [RPAR]
   14 parameterList: . parameterDeclaration new_nine
   17 parameterDeclaration: . typeSpecifier new_six ID
   21 typeSpecifier: . INT
   22              | . CHAR

    CHAR  shift, and go to state 1
    INT   shift, and go to state 2

    $default  reduce using rule 13 (new_ten)

    new_ten               go to state 45
    parameterList         go to state 46
    parameterDeclaration  go to state 47
    typeSpecifier         go to state 48


state 25

   23 declarator: new_six ID new_seven .

    $default  reduce using rule 23 (declarator)


state 26

    8 new_eleven: new_eleven declaration .

    $default  reduce using rule 8 (new_eleven)


state 27

   18 declaration: typeSpecifier . declarator new_eight SEMI
   23 declarator: . new_six ID new_seven
   24 new_six: . new_six AST
   25        | .

    $default  reduce using rule 25 (new_six)

    declarator  go to state 13
    new_six     go to state 30


state 28

    7 functionDefinition: typeSpecifier functionDeclarator LBRACE new_eleven new_four . RBRACE
   28 statement: . SEMI
   29          | . expression SEMI
   30          | . LBRACE new_four RBRACE
   31          | . IF LPAR expression RPAR statement ELSE statement
   32          | . IF LPAR expression RPAR statement
   33          | . WHILE LPAR expression RPAR statement
   34          | . RETURN expression SEMI
   35 new_four: new_four . statement
   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   53           | . PLUS expression
   54           | . AST expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    IF      shift, and go to state 49
    WHILE   shift, and go to state 50
    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    RETURN  shift, and go to state 51
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    SEMI    shift, and go to state 52
    LBRACE  shift, and go to state 53
    RBRACE  shift, and go to state 54
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    statement   go to state 55
    expression  go to state 56


state 29

   19 new_eight: new_eight COMMA declarator .

    $default  reduce using rule 19 (new_eight)


state 30

   23 declarator: new_six . ID new_seven
   24 new_six: new_six . AST

    AST  shift, and go to state 18
    ID   shift, and go to state 57


state 31

   58 expression: ATOI . LPAR expression RPAR

    LPAR  shift, and go to state 58


state 32

   60 expression: ITOA . LPAR expression COMMA expression RPAR

    LPAR  shift, and go to state 59


state 33

   59 expression: PRINTF . LPAR expression RPAR

    LPAR  shift, and go to state 60


state 34

   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   53           | . PLUS expression
   54           | . AST expression
   55           | . AMP expression
   55           | AMP . expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 61


state 35

   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   53           | . PLUS expression
   54           | . AST expression
   54           | AST . expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 62


state 36

   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   53           | . PLUS expression
   54           | . AST expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   61           | LPAR . expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 63


state 37

   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   52           | MINUS . expression
   53           | . PLUS expression
   54           | . AST expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 64


state 38

   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   52           | . MINUS expression
   53           | . PLUS expression
   53           | PLUS . expression
   54           | . AST expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 65


state 39

   37 expression: . expression ASSIGN expression
   38           | . expression OR expression
   39           | . expression AND expression
   40           | . expression GE expression
   41           | . expression LE expression
   42           | . expression GT expression
   43           | . expression LT expression
   44           | . expression NE expression
   45           | . expression EQ expression
   46           | . expression MOD expression
   47           | . expression DIV expression
   48           | . expression AST expression
   49           | . expression MINUS expression
   50           | . expression PLUS expression
   51           | . NOT expression
   51           | NOT . expression
   52           | . MINUS expression
   53           | . PLUS expression
   54           | . AST expression
   55           | . AMP expression
   56           | . expression LSQ expression RSQ
   57           | . ID LPAR new_one RPAR
   58           | . ATOI LPAR expression RPAR
   59           | . PRINTF LPAR expression RPAR
   60           | . ITOA LPAR expression COMMA expression RPAR
   61           | . LPAR expression RPAR
   62           | . STRLIT
   63           | . CHRLIT
   64           | . INTLIT
   65           | . ID

    ATOI    shift, and go to state 31
    ITOA    shift, and go to state 32
    PRINTF  shift, and go to state 33
    AMP     shift, and go to state 34
    AST     shift, and go to state 35
    LPAR    shift, and go to state 36
    MINUS   shift, and go to state 37
    PLUS    shift, and go to state 38
    NOT     shift, and go to state 39
    INTLIT  shift, and go to state 40
    CHRLIT  shift, and go to state 41
    STRLIT  shift, and go to state 42
    ID      shift, and go to state 43

    expression  go to state 66


state 40

   64 expression: INTLIT .

    $default  reduce using rule 64 (expression)


state 41

   63 expression: CHRLIT .

    $default  reduce using rule 63 (expression)


state 42

   62 expression: STRLIT .

    $default  reduce using rule 62 (expression)


state 43

   57 expression: ID . LPAR new_one RPAR
   65           | ID .  [EQ, ASSIGN, GE, GT, LE, LT, NE, AND, AST, DIV, COMMA, SEMI, LSQ, RSQ, RPAR, MINUS, PLUS, MOD, OR]

    LPAR  shift, and go to state 67

    $default  reduce using rule 65 (expression)


state 44

   26 new_seven: LSQ expression . RSQ
   37 expression: expression . ASSIGN expression
   38           | expression . OR expression
   39           | expression . AND expression
   40           | expression . GE expression
   41           | expression . LE expression
   42           | expression . GT expression
   43           | expression . LT expression
   44           | expression . NE expression
   45           | expression . EQ expression
   46           | expression . MOD expression
   47           | expression . DIV expression
   48           | expression . AST expression
   49           | expression . MINUS expression
   50           | expression . PLUS expression
   56           | expression . LSQ expression RSQ
